assets/style/home.css
@charset "utf-8";

.flex-sb {
  justify-content: space-between;
}

li {
  list-style: none;
}

header {
  background-color: var(--white);
  height: 4rem;
  box-shadow: 0px 0px 5px rgba(151, 151, 151, 0.086);
  position: relative;

  .container {
    align-items: center;
    height: 100%;
  }
}

.header-left-content {
  align-items: center;

  .logo-circle {
    width: 50px;
    height: 50px;
    background-color: var(--background-color);
    border-radius: 50%;
    margin-right: 30px;
    cursor: pointer;
  }

  .logo {
    background-image: url('../media/logo.png');
    background-size: contain;
    background-position: center;
    background-repeat: no-repeat;
    width: 30px;
    height: 30px;
  }

  .search-bar-wrapper {
    position: relative;
    display: inline-block;
    width: 200px;
  }

  .search-bar {
    height: 35px;
    width: 100%;
    border-radius: var(--input-border-radius);
    border: none;
    background-color: var(--background-color);
    padding-left: 40px;
  }

  .search-icon {
    position: absolute;
    left: 10px;
    top: 50%;
    transform: translateY(-50%);
    width: 20px;
    height: 20px;
  }
}

.header-mid-icons {
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  width: 300px;

  a img {
    height: 27px;
  }
}

.header-right-content {
  cursor: pointer;
  background-color: var(--background-color);
  height: 39px;
  padding: 0 9px;
  border-radius: var(--input-border-radius);
  align-items: center;
  width: 200px;

  .header-pfp {
    border-radius: 50%;
    overflow: hidden;
    width: 30px;
    height: 30px;
    margin-right: 7px;
  }

  .dropdown-icon {
    height: 10px;
  }
}

main {
  min-height: 500px;

  .container {
    align-items: flex-start;

  }

  aside,
  section>div {
    background-color: var(--white);
  }

  aside {
    width: 30%;
    padding-top: var(--main-widget-padding);
    padding-bottom: var(--main-widget-padding);
    margin-top: var(--main-widget-gap);
    border-radius: var(--widget-border-radius);
  }

  .left-aside {
    overflow: hidden;
    height: auto;

    .banner-img {
      background-image: url('../media/img-profile-banner.jpg');
      background-size: cover;
      background-position: center;
      height: 115px;
      margin-top: -20px;
      position: relative;
    }

    .aside-olivia {
      position: absolute;
      left: 50%;
      top: 100%;
      transform: translate(-50%, -50%);
      border-radius: 30px;
      border: 4px solid var(--background-color);
      width: 80px;
    }

    .username-tag {
      margin-top: 50px;
      display: flex;
      flex-direction: column;
      align-items: center;

      span:first-child {
        font-size: 24px;
        line-height: 1;
        margin-top: 4px;
      }

      span:nth-child(2) {
        color: var(--dark-gray);
        font-size: var(--small-gray-text);
      }
    }

    .followers-following {
      position: absolute;
      left: 50%;
      transform: translateX(-50%);
      top: calc(100% + 4px);
      width: 220px;

      .profile-stat {
        display: flex;
        flex-direction: column;
        align-items: center;

        span:first-child {
          font-size: 20px;
          line-height: 1;
        }

        span:nth-child(2) {
          color: var(--dark-gray);
          font-size: var(--small-gray-text);
        }
      }
    }

    .bio {
      text-align: center;
      margin-top: 15px;
      padding-inline: var(--main-widget-padding);
    }

    .premium {
      display: block;
      width: 80%;
      margin: 0 auto;
      margin-top: 25px;
      padding: 9px 0;
      border: none;
      background-color: var(--main-color);
      border-radius: var(--input-border-radius);
      color: var(--white);
      cursor: pointer;
    }
  }

  .content {
    width: 50%;
    text-align: center;
    margin-top: var(--main-widget-gap);
    margin-inline: var(--main-widget-gap);

    .form {
      background-color: var(--white);
      padding: 20px;
      border-radius: 20px;

      ::placeholder {
        color: var(--dark-gray);
      }

      input {
        width: 100%;
        background-color: var(--background-color);
        padding: 20px;
        border-radius: 20px;
        border: none;
      }

      a {
        text-decoration: none;
      }

      ul li {
        display: flex;
        gap: 5px;
        margin: 20px 20px 0 10px;
        color: var(--color);
        align-items: center;

        img {
          width: 20px;
          margin: 0;
        }
      }

      img {
        width: 25px;
        margin: 20px 10px 0 0;
      }
    }

    .post {
      background-color: var(--white);
      padding: 20px;
      border-radius: 20px;
      margin-top: var(--main-widget-gap);
      color: var(--color);

      .head {
        justify-content: space-between;
        margin-bottom: 20px;

        >div {
          width: 100%;
          text-align: left;
          padding-left: 10px;

          >div span:last-of-type {
            line-height: 1;
          }

          >div span:last-of-type {
            color: var(--dark-gray);
            font-size: var(--small-gray-text);
            line-height: 1;
          }

          >div:last-of-type {
            position: relative;
            flex-direction: column;
            align-items: flex-end;
            justify-content: flex-end;

            img {
              width: 4px;
              position: absolute;
              top: 0;
            }
          }
        }

        img {
          &.portrait {
            width: 60px;
            border-radius: 50%;
            border: 4px solid var(--background-color);
          }
        }
      }

      .message {
        text-align: left;
        img {
          border-radius: 20px;
          border: 1px solid var(--white);
          margin: 20px 0;
        }
        p {
          line-height: 1.5;
        }
      }

      ul {
        gap: 3px;
      }

      ul li img {
        /* aspect-ratio: 1 / 1; */
        width: 23px;
        margin: 0 20px 0 0;
      }
    }
  }

  .right-aside {
    padding: var(--main-widget-padding);

    h2 {
      font-size: 20px;
      line-height: 1;
      margin-bottom: var(--main-widget-padding);
    }

    .user {
      background-color: var(--background-color);
      border-radius: 20px;
      align-items: center;
      margin: 10px 0;
      padding: 10px;
      font-size: 14px;
      color: var(--color);

      img {
        aspect-ratio: 1 / 1;

        &.portrait {
          border: 1px solid var(--white);
          border-radius: 50%;
        }

        &.add {
          width: 17px;
          height: 17px;
          cursor: pointer;
        }
      }

      .grid {
        width: 100%;
        padding-left: 10px;

        span:last-of-type {
          color: var(--dark-gray);
          font-size: var(--small-gray-text);
        }
      }
    }
  }
}

footer {
  margin: 50px 0 0 0;
  padding: var(--main-widget-padding) 0;
  background-color: var(--white);

  ul li:first-child {
    font-weight: 300;
  }

  ul a {
    text-decoration: none;
    color: var(--color);
    font-weight: 400;
  }
}

